tests/NormalTests/paczka1/small_fuzzy/35869713.err
Error in line 8: A238 A238 72,8
Error in line 11: A238 A958 43,4
